--- a/product-2.html
+++ b/product-2.html
@@ -63,7 +63,7 @@
                 <img class="product-img"
                 src="https://raw.githubusercontent.com/Minh2301/Chain-Z/image/img-shop-3.jpg"  alt="">
             <div class="box-product-info">
-                <div class="product-name">Dây đeo khẩu trang handmade nhiều màu cá tính</div>
+                <div class="product-name">Dây đeo khẩu trang handmade màu trắng</div>
                 <div class="product-status">NEW IN</div>
                 <div class="product-price">39,999VNĐ</div>
                 <h2>Nguyên liệu</h2>
