--- a/product-1.html
+++ b/product-1.html
@@ -63,9 +63,9 @@
                 <img class="product-img"
                 src="https://raw.githubusercontent.com/Minh2301/Chain-Z/image/img-shop-2.png"  alt="">
             <div class="box-product-info">
-                <div class="product-name">Dây đeo khẩu trang handmade nhiều màu cá tính</div>
+                <div class="product-name">Dây đeo khẩu trang handmade nhiều màu nữ tính</div>
                 <div class="product-status">NEW IN</div>
-                <div class="product-price">29,999VNĐ</div>
+                <div class="product-price">39,999VNĐ</div>
                 <h2>Nguyên liệu</h2>
                 <p>Nhựa nhiều màu và thép không gỉ
                      </p>
