--- a/about.html
+++ b/about.html
@@ -93,8 +93,8 @@
         <p>Trong quá trình hình thành thương hiệu, đội ngũ của ChainZ liên tục suy nghĩ ra những chiến lược hiệu quả đem lại thuận lợi cho khách hàng cũng như bản thân hãng. Để chứng minh rằng Chain Z vẫn còn chỗ đứng trong tương lai, chứ không phải chỉ là một trào lưu trong thời Covid-19. Vì vậy Chain Z quyết định sẽ nhận thiết kế những mẫu mà khách hàng để mỗi khách hàng đều được sở hữu những chiếc dây đeo khẩu trang phù hợp với cá tính. Cùng với các dịch vụ thiết kế theo yêu cầu với mức giá sẽ được đề xuất.</p>
     </div>
    </div>
-   <div class="quote">What you think you become. What you feel, you attract.What you imagine,you create.
-       <span class="box-wrap quote"><div class="quote-line"></div> <span class="quote-author">Gautama Buuddah</span></span> </div>
+   <div class="quote">expressed yourself through your fashion.
+       <span class="box-wrap quote"><div class="quote-line"></div> <span class="quote-author">Chain Z</span></span> </div>
 </main>
 <div class="box-wrap large  padding-top padding-bottom">
 <div class="box-wrap">
