--- a/home.html
+++ b/home.html
@@ -121,7 +121,7 @@
                
                 alt="" >
             </a>
-                 <div class="product-name">>Dây đeo handmade nhiều màu tính</div>
+                 <div class="product-name">Dây đeo handmade nhiều màu nữ tính</div>
                  <div class="product-price">39,999 VNĐ</div>
         </div>
            <div class="product-container">
@@ -132,7 +132,7 @@
                 alt="" >
             </a>
             <div class="product-name">Dây đeo handmade màu trắng</div>
-            <div class="product-price">29,999 VNĐ</div>
+            <div class="product-price">39,999 VNĐ</div>
            </div>
            <div class="product-container">
             <a href="product-3.html" class="img-product-container">
@@ -141,7 +141,7 @@
                 alt="" >
             </a>
                  <div class="product-name">Dây đeo handmade màu đen</div>
-                 <div class="product-price">VNĐ</div>
+                 <div class="product-price">29,999 VNĐ</div>
        </div>
        </div>
        <div class="box-wrap end ">
