--- a/about.html
+++ b/about.html
@@ -73,13 +73,13 @@
     alt="">
        <div class="box-content intro">
            <h1>Về chúng tôi</h1>
-           <p>Trước tình hình dịch Covid-19 đang bùng phát và lan rộng khắp thế giới hiện nay, ChainZ được thành lập với mục đích là giúp các bạn thỏa mãn đam mê thời trang bằng những sản phẩm dây đeo khẩu trang “thời thượng” nhưng “thoải mái”. 
+           <p>Trước tình hình dịch Covid-19 đang bùng phát và lan rộng khắp thế giới hiện nay, Chain Z được thành lập với mục đích là giúp các bạn thỏa mãn đam mê thời trang bằng những sản phẩm dây đeo khẩu trang “thời thượng” nhưng “thoải mái”. 
         </p>
        </div>
    </div>
    <div class="box-content large">
        <h1>Quy trình tạo ra ý tưởng</h1>
-       <p>Ý tưởng ChainZ đến từ 6 học sinh lớp 11 đến từ trường LSTS thông qua quá trình thực hiện  dự án Nhà Kinh Doanh Trẻ. Nhằm tạo ra sản phẩm đáp ứng được các tiêu chí từ tính sáng tạo cũng như tính cần thiết, nhóm đã cùng nhau thảo luận và tìm kiếm ý tưởng và cho ra đời Chain Z. Thông qua thời sự và báo chí, chúng mình biết được đại dịch Covid-19 đang hoành hành khắp thế giới và khẩu trang y tế trở thành một “công cụ đắc lực” để bảo vệ chúng ta khỏi sự lây lan của virus Corona. Nhưng chúng có những nhược điểm như thiết kế quá đơn giản cũng như khó khăn tìm chỗ cất khi tháo ra. Từ những nhược điểm trên, nhóm chúng mình đã suy nghĩ ra giải pháp là tạo nên những chiếc dây đeo khẩu trang, những chiếc dây đeo này không chỉ giúp khách hàng thuận lợi để khẩu trang khi cởi ra mà còn có những họa tiết giúp khẩu trang của họ nhìn phong cách hơn. Cuối cùng vào tháng 10 năm 2021, ChainZ được thành lập.</p>
+       <p>Ý tưởng Chain Z đến từ 6 học sinh lớp 11 đang theo học tại trường LSTS thông qua quá trình thực hiện  dự án Nhà Kinh Doanh Trẻ. Nhằm tạo ra sản phẩm đáp ứng được các tiêu chí từ tính sáng tạo cũng như tính cần thiết, nhóm đã cùng nhau thảo luận và tìm kiếm ý tưởng và cho ra đời Chain Z. Thông qua thời sự và báo chí, chúng mình biết được đại dịch Covid-19 đang hoành hành khắp thế giới và khẩu trang y tế trở thành một “công cụ đắc lực” để bảo vệ chúng ta khỏi sự lây lan của virus Corona. Nhưng chúng có những nhược điểm như thiết kế quá đơn giản cũng như khó khăn tìm chỗ cất khi tháo ra. Từ những nhược điểm trên, nhóm chúng mình đã suy nghĩ ra giải pháp là tạo nên những chiếc dây đeo khẩu trang, những chiếc dây đeo này không chỉ giúp khách hàng thuận lợi để khẩu trang khi cởi ra mà còn có những họa tiết giúp khẩu trang của họ nhìn phong cách hơn. Cuối cùng vào tháng 10 năm 2021, ChainZ được thành lập.</p>
 
     
    </div>
