--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
    </div>
    <div class="box-content large">
        <h1>Quy trình tạo ra ý tưởng</h1>
-       <p>Ý tưởng Chain Z đến từ 6 học sinh lớp 11 đang theo học tại trường LSTS thông qua quá trình thực hiện  dự án Nhà Kinh Doanh Trẻ. Nhằm tạo ra sản phẩm đáp ứng được các tiêu chí từ tính sáng tạo cũng như tính cần thiết, nhóm đã cùng nhau thảo luận và tìm kiếm ý tưởng và cho ra đời Chain Z. Thông qua thời sự và báo chí, chúng mình biết được đại dịch Covid-19 đang hoành hành khắp thế giới và khẩu trang y tế trở thành một “công cụ đắc lực” để bảo vệ chúng ta khỏi sự lây lan của virus Corona. Nhưng chúng có những nhược điểm như thiết kế quá đơn giản cũng như khó khăn tìm chỗ cất khi tháo ra. Từ những nhược điểm trên, nhóm chúng mình đã suy nghĩ ra giải pháp là tạo nên những chiếc dây đeo khẩu trang, những chiếc dây đeo này không chỉ giúp khách hàng thuận lợi để khẩu trang khi cởi ra mà còn có những họa tiết giúp khẩu trang của họ nhìn phong cách hơn. Cuối cùng vào tháng 10 năm 2021, ChainZ được thành lập.</p>
+       <p>Ý tưởng Chain Z đến từ 6 học sinh lớp 11 đang theo học tại trường LSTS thông qua quá trình thực hiện  dự án Nhà Kinh Doanh Trẻ. Nhằm tạo ra sản phẩm đáp ứng được các tiêu chí từ tính sáng tạo cũng như tính cần thiết, nhóm đã cùng nhau thảo luận và tìm kiếm ý tưởng và cho ra đời Chain Z. Thông qua thời sự và báo chí, chúng mình biết được đại dịch Covid-19 đang hoành hành khắp thế giới và khẩu trang y tế trở thành một “công cụ đắc lực” để bảo vệ chúng ta khỏi sự lây lan của virus Corona. Nhưng chúng có những nhược điểm như thiết kế quá đơn giản cũng như khó khăn tìm chỗ cất khi tháo ra. Từ những nhược điểm trên, nhóm chúng mình đã suy nghĩ ra giải pháp là tạo nên những chiếc dây đeo khẩu trang, những chiếc dây đeo này không chỉ giúp khách hàng thuận lợi để khẩu trang khi cởi ra mà còn có những họa tiết giúp khẩu trang của họ nhìn phong cách hơn. Cuối cùng vào tháng 10 năm 2021, Chain Z được thành lập.</p>
 
     
    </div>
@@ -90,7 +90,7 @@
             alt="">
     <div class="box-content small">
         <h1>Chiến lược</h1>
-        <p>Trong quá trình hình thành thương hiệu, đội ngũ của ChainZ liên tục suy nghĩ ra những chiến lược hiệu quả đem lại thuận lợi cho khách hàng cũng như bản thân hãng. Để chứng minh rằng Chain Z vẫn còn chỗ đứng trong tương lai, chứ không phải chỉ là một trào lưu trong thời Covid-19. Vì vậy Chain Z quyết định sẽ nhận thiết kế những mẫu mà khách hàng để mỗi khách hàng đều được sở hữu những chiếc dây đeo khẩu trang phù hợp với cá tính. Cùng với các dịch vụ thiết kế theo yêu cầu với mức giá sẽ được đề xuất.</p>
+        <p>Trong quá trình hình thành thương hiệu, đội ngũ của Chain Z liên tục suy nghĩ ra những chiến lược hiệu quả đem lại thuận lợi cho khách hàng cũng như bản thân hãng. Để chứng minh rằng Chain Z vẫn còn chỗ đứng trong tương lai, chứ không phải chỉ là một trào lưu trong thời Covid-19. Vì vậy Chain Z quyết định sẽ nhận thiết kế những mẫu mà khách hàng để mỗi khách hàng đều được sở hữu những chiếc dây đeo khẩu trang phù hợp với cá tính. Cùng với các dịch vụ thiết kế theo yêu cầu với mức giá sẽ được đề xuất.</p>
     </div>
    </div>
    <div class="quote">expressed yourself through your fashion.
@@ -99,11 +99,11 @@
 <div class="box-wrap large  padding-top padding-bottom">
 <div class="box-wrap">
     <div class="box-content small end ">
-        <h1>Difficulties</h1>
-        <p>Khó khăn thứ nhất là mức duy trì doanh thu của hãng, vào thời điểm dịch bệnh này, khẩu trang đang rất cần thiết nên ChainZ sẽ là sự lựa chọn của mọi nhà để bảo vệ bản thân và cộng đồng, vì vây doanh thu cũng sẽ cao và ổn định. Tuy nhiên, sau khi đại dịch Covid được dập tắt, doanh thu của hãng sẽ biến đổi. 
+        <h1>Khó khăn</h1>
+        <p>Khó khăn thứ nhất là mức duy trì doanh thu của hãng, vào thời điểm dịch bệnh này, khẩu trang đang rất cần thiết nên Chain Z sẽ là sự lựa chọn của mọi nhà để bảo vệ bản thân và cộng đồng, vì vây doanh thu cũng sẽ cao và ổn định. Tuy nhiên, sau khi đại dịch Covid được dập tắt, doanh thu của hãng sẽ biến đổi. 
 
             <br> <br>
-            Vấn đề thứ 2 là về mặt thiết kế và vật liệu, với mong muốn mọi khách hàng nào cũng có những chiếc dây đeo khẩu trang phù hợp với sở thích và cá tính của bản thân, ChainZ sẽ cần rất nhiều nguồn nhân lực, vật liệu, tới các mẫu thiết kế để đáp ứng được nhu cầu đó. Đối với một nhãn hiệu nhỏ thì đây đang là một trong những trở ngại duy nhất mà nhóm phải vượt qua. 
+            Vấn đề thứ 2 là về mặt thiết kế và vật liệu, với mong muốn mọi khách hàng nào cũng có những chiếc dây đeo khẩu trang phù hợp với sở thích và cá tính của bản thân, Chain Z sẽ cần rất nhiều nguồn nhân lực, vật liệu, tới các mẫu thiết kế để đáp ứng được nhu cầu đó. Đối với một nhãn hiệu nhỏ thì đây đang là một trong những trở ngại duy nhất mà nhóm phải vượt qua. 
         </p>
     </div>
   
