--- a/home.html
+++ b/home.html
@@ -66,12 +66,7 @@
          src="https://raw.githubusercontent.com/Minh2301/Chain-Z/image/img-black%26multi.jpg"
        
          alt="" 
-      >  <!--  700/1204  srcset="
-       https://raw.githubusercontent.com/Minh2301/Chain-Z/main/intro-img-home-400.jpg 400w,
-       https://raw.githubusercontent.com/Minh2301/Chain-Z/main/intro-img-home-600.jpg 600w,
-       https://raw.githubusercontent.com/Minh2301/Chain-Z/main/intr-img-home-800.jpg  800w
-       "
-       sizes="(min-width:770px)54.6875vw,90vw "  -->
+      >  
      <div class="box-intro-content">
           <h1></h1>
           <p>Dây đeo khẩu trang của Chain Z được thiết kế đáp ứng mọi xu hướng thời trang
@@ -87,16 +82,16 @@
          src="https://raw.githubusercontent.com/Minh2301/Chain-Z/image/img-material-2.jpg"
      
          alt="" 
-     >   <!--  srcset="
-     https://raw.githubusercontent.com/Minh2301/Chain-Z/main/img-1-home-400.jpg 400w,
-     https://raw.githubusercontent.com/Minh2301/Chain-Z/main/img-1-home-600.jpg 600w,
-     https://raw.githubusercontent.com/Minh2301/Chain-Z/main/img-1-home-800.jpg 800w
-     "
-    sizes="(min-width:770px)45.703125vw,56vw "  -->
+     >   
         <div class="box-content-1">
             <h1>Điểm khác biệt</h1>
             <p>
-                Về sản phẩm, ngoài việc phụ kiện của chúng tôi phải khiến sản phẩm thật bắt mắt, nhiều màu sắc, ChainZ chủ trương chỉ sử dụng những nguyên vật liệu đạt đủ tiêu chuẩn về độ bền, nhẹ, và thân thiện với môi trường. Điều đó khiến dây đeo khẩu trang của chúng tôi vượt trội hơn hẳn là không chỉ đáp ứng thẩm mỹ  mà chúng được sử dụng lâu dài và khi bỏ đi thì vẫn có thể tái chế được. Ngoài ra, các yêu cầu thiết kế riêng mà chúng tôi làm cho bạn sẽ đúng với những gì khách hàng kỳ vọng. Dịch vụ chăm sóc khách hàng của chúng tôi rất tích cực và luôn sẵn sàng nghe ý kiến của khách hàng để có thể giải quyết các vấn đề và khiến quan hệ giữa chúng ta khăng khít hơn. 
+                Về sản phẩm, ngoài việc phụ kiện của chúng tôi phải khiến sản phẩm thật bắt mắt, nhiều màu sắc, Chain Z 
+                chủ trương chỉ sử dụng những nguyên vật liệu đạt đủ tiêu chuẩn về độ bền, nhẹ, và thân thiện với môi trường. 
+                Điều đó khiến dây đeo khẩu trang của chúng tôi vượt trội hơn hẳn là không chỉ đáp ứng thẩm mỹ  mà chúng được
+                sử dụng lâu dài và khi bỏ đi thì vẫn có thể tái chế được. Ngoài ra, các yêu cầu thiết kế riêng mà chúng tôi 
+                làm cho bạn sẽ đúng với những gì khách hàng kỳ vọng. Dịch vụ chăm sóc khách hàng của chúng tôi rất tích cực
+                và luôn sẵn sàng nghe ý kiến của khách hàng để có thể giải quyết các vấn đề và khiến quan hệ giữa chúng ta khăng khít hơn. 
                 </p>
        </div>
     </div>
@@ -175,7 +170,10 @@
      sizes="(min-width:770px)37.5vw,56vw" -->
      <div class="box-content-3">
         <h1>Cách chúng tôi làm ra nó</h1>
-        <p>Đầu tiên chúng tôi mua các nguyên vật liệu có sẵn trên các sàn thương mại điện tử. Sau khi đã chọn được vật liệu thích hợp thì tiếp theo đó là lên ý tưởng cho sản phẩm làm sao để nó trong đẹp nhất với chiếc khẩu trang thường nhật của bạn. Sau đó việc còn lại của các thành viên là xỏ các hạt vào để thành sản phẩm hoàn chỉnh. Việc cuối cùng là gắn chốt cài vao hai đầu dây đeo vậy là đã hoàn thành xong một phụ kiện đeo khẩu trang vô cùng đẹp đẽ rồi!</p>
+        <p>Đầu tiên chúng tôi mua các nguyên vật liệu có sẵn trên các sàn thương mại điện tử. Sau khi đã chọn được vật liệu thích hợp
+            thì tiếp theo đó là lên ý tưởng cho sản phẩm làm sao để nó trong đẹp nhất với chiếc khẩu trang thường nhật của bạn. 
+            Sau đó việc còn lại của các thành viên là xỏ các hạt vào để thành sản phẩm hoàn chỉnh. Việc cuối cùng là gắn chốt cài vào hai đầu dây đeo
+            vậy là đã hoàn thành xong một phụ kiện đeo khẩu trang vô cùng đẹp đẽ rồi!</p>
 </div>
 </div>
 </main>
