--- a/home.html
+++ b/home.html
@@ -200,8 +200,12 @@
         <h2>NHẬN THÔNG BÁO</h2>
         <div class="footer-line"></div>
        <h3>Đăng ký nhận thông báo mới nhất qua Email</h3>
-       <input type="email"placeholder="Email Adress" name="" id="">
-       <button href="" class="footer-btn">Đăng Ký</button>
+       <form action="https://formsubmit.co/your@email.com" method="POST">
+        <input type="hidden" name="_subject" value="New Submission!">
+        <input type="email" name="email" placeholder="Email Adress"  required>
+        <input type="hidden" name="_next" value="https://minh2301.github.io/Chain-Z/thanks.html">
+        <button type="submit" class="footer-btn">Đăng Ký</button>
+        </form>
     </div>
     
         
