--- a/home.html
+++ b/home.html
@@ -200,7 +200,7 @@
         <h2>NHẬN THÔNG BÁO</h2>
         <div class="footer-line"></div>
        <h3>Đăng ký nhận thông báo mới nhất qua Email</h3>
-       <form action="https://formsubmit.co/your@email.com" method="POST">
+       <form action="https://formsubmit.co/1606131@lsts.edu.vn" method="POST">
         <input type="hidden" name="_subject" value="New Submission!">
         <input type="email" name="email" placeholder="Email Adress"  required>
         <input type="hidden" name="_next" value="https://minh2301.github.io/Chain-Z/thanks.html">
