--- a/home.html
+++ b/home.html
@@ -202,6 +202,7 @@
        <h3>Đăng ký nhận thông báo mới nhất qua Email</h3>
        <form action="https://formsubmit.co/1606131@lsts.edu.vn" method="POST">
         <input type="hidden" name="_subject" value="New Submission!">
+           <input type="hidden" name="_captcha" value="false">
         <input type="email" name="email" placeholder="Email Adress"  required>
         <input type="hidden" name="_next" value="https://minh2301.github.io/Chain-Z/thanks.html">
         <button type="submit" class="footer-btn">Đăng Ký</button>
