--- a/product-3.html
+++ b/product-3.html
@@ -121,7 +121,7 @@
                 <h2>NHẬN THÔNG BÁO</h2>
                 <div class="footer-line"></div>
                <h3>Đăng ký nhận thông báo mới nhất qua Email</h3>
-              <form action="https://formsubmit.co/1606131@lsts.edu.vn" method="POST">
+              <form action="https://formsubmit.co/thechainzii@gmail.com" method="POST">
         <input type="hidden" name="_subject" value="New Submission!">
            <input type="hidden" name="_captcha" value="false">
         <input type="email" name="email" placeholder="Email Adress"  required>
