--- a/thanks.html
+++ b/thanks.html
@@ -6,7 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thanks</title>
 </head>
+<style>
+    body{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    h1{
+        font-weight: 400;
+    }
+    p{
+        font-size: 20px;
+    }
+    .container{
+        max-width: 600px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    div>p{text-align: center;
+        width: 100%;
+    }
+    a{  margin-top: 2rem;
+        text-decoration: none;
+        width: 8rem;
+        height: 3rem;
+        display: flex;
+        background-color: black;
+        color: white;
+        align-items: center;
+        justify-content: center;
+    }
+    a:hover{
+        border:1px solid black;
+        background-color: white;
+        color: black;
+    }
+</style>
 <body>
-    <h1>Thanks</h1>
+    <div class="container">
+    <div class="icon"><svg width="168" height="168" viewBox="0 0 168 168" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M147 84C147 49.2188 118.781 21 84 21C49.2188 21 21 49.2188 21 84C21 118.781 49.2188 147 84 147C118.781 147 147 118.781 147 84Z" stroke="black" stroke-width="10" stroke-miterlimit="10"/>
+        <path d="M120.75 63L84.0427 105L68.3091 89.25" stroke="black" stroke-width="10" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M62.9836 105L47.25 89.25" stroke="black" stroke-width="10" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M100.311 63L83.3962 82.3594" stroke="black" stroke-width="10" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg></div>
+    <div><h1>Đăng kí thành công</h1> </div>
+    <div><p>Cảm ơn bạn đã theo dõi và ủng hộ Chain Z. Nếu có cập nhật nào về mẫu sản phẩm nào mới nhất thì bạn sẽ là một trong những người đầu tiên được nhận thông báo. Nếu bạn vẫn muốn mua sắm thì click vào nút dưới đây.</p> </div>
+   <div> <a href="https://minh2301.github.io/Chain-Z/home.html">nhấn vào đây</a></div>
+    </div>
 </body>
 </html>
